--- a/calculator.css
+++ b/calculator.css
@@ -2,7 +2,7 @@
   border: 1px solid rgb(168, 165, 165);
   border-radius: 5px;
   width: 200px;
-  
+  background-color: aliceblue;
 }
 #Display{
   width: 85%;
@@ -20,4 +20,18 @@
 display: flex;
 justify-content: center;
 flex-wrap: wrap;
+}
+
+.project{
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+background-color: beige;
+}
+
+.heading{
+text-align: center;
+font-size: xx-large;
+background-color: rgb(216, 216, 128);
 }
